--- a/main.html
+++ b/main.html
@@ -8,8 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div>
+		<audio>
+			<source src=""/sounds/applause.mp3" type="audio/mpeg">
+		</audio>
+
+		<button id="playPauseBTN" onclick="playPause()">play &#9658;</button>
+		&nbsp;
+		&nbsp;
+		<button onclick="stop()">Stop &#9658;</button>
+	</div>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
